--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 			默认 </init-param> -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:ioc/spring-servlet.xml</param-value>
+			<param-value>classpath:ioc/application.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
