--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -42,5 +42,21 @@
 			<artifactId>beetl</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.0.25</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.ibeetl/beetlsql -->
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz</artifactId>
+			<version>1.r.57.r3</version>
+		</dependency>
 	</dependencies>
 </project>
