--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -58,5 +58,15 @@
 			<artifactId>nutz</artifactId>
 			<version>1.r.57.r3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-integration-spring</artifactId>
+			<version>1.r.57</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.39</version>
+		</dependency>
 	</dependencies>
 </project>
