--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -34,10 +34,10 @@
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
-        <location>/404.jsp</location>
+        <location>/404</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/500.jsp</location>
+        <location>/500</location>
     </error-page>
 </web-app>
