--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,14 @@
     <listener>
         <listener-class>club.zhcs.thunder.listener.NutzContenxtInitListener</listener-class>
     </listener>
+    <filter>
+    	<filter-name>base</filter-name>
+    	<filter-class>club.zhcs.thunder.filter.ContextPathInjectFilter</filter-class>
+    </filter>
+    <filter-mapping>
+    	<filter-name>base</filter-name>
+    	<url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>spring</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
