--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,22 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="WebApp_ID" version="2.5">
     <display-name>spring-thunder</display-name>
+    <listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+
+	<filter>
+		<filter-name>ShiroFilter</filter-name>
+		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
 
     <listener>
         <listener-class>club.zhcs.thunder.listener.NutzContenxtInitListener</listener-class>
@@ -14,6 +30,10 @@
     <filter-mapping>
     	<filter-name>base</filter-name>
     	<url-pattern>/*</url-pattern>
+    	<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
     </filter-mapping>
     <servlet>
         <servlet-name>spring</servlet-name>
