--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -107,5 +107,10 @@
 			<artifactId>titans</artifactId>
 			<version>2.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-plugins-sigar</artifactId>
+			<version>1.r.58</version>
+		</dependency>
 	</dependencies>
 </project>
