--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -112,5 +112,10 @@
 			<artifactId>nutz-plugins-sigar</artifactId>
 			<version>1.r.58</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.4</version>
+		</dependency>
 	</dependencies>
 </project>
