--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -91,6 +91,10 @@
 		<location>/404.jsp</location>
 	</error-page>
 	<error-page>
+		<error-code>400</error-code>
+		<location>/400.jsp</location>
+	</error-page>
+	<error-page>
 		<error-code>500</error-code>
 		<location>/500.jsp</location>
 	</error-page>
