--- a/spring-thunder/src/main/resources/beetl.properties
+++ b/spring-thunder/src/main/resources/beetl.properties
@@ -8,6 +8,5 @@ FN.config = club.zhcs.thunder.ext.beetl.ConfigFun
 FN.loginUser = club.zhcs.thunder.ext.beetl.LoginUserFun
 FN.alarmType = club.zhcs.thunder.ext.beetl.AlarmTypeFun
 FN.json = club.zhcs.thunder.ext.beetl.JsonFun
-#FN.hasRole = club.zhcs.thunder.ext.beetl.shiro.ShiroRoleFunction
-#FN.hasPermission = club.zhcs.thunder.ext.beetl.shiro.ShiroPermissionFuntion
-#FN.wechatAuth = club.zhcs.thunder.ext.beetl.wechat.WechatAuthFun
+FN.hasRole = club.zhcs.thunder.ext.beetl.shiro.ShiroRoleFunction
+FN.hasPermission = club.zhcs.thunder.ext.beetl.shiro.ShiroPermissionFuntion
