--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
 	<listener>
 		<listener-class>club.zhcs.thunder.listener.NutzContenxtInitListener</listener-class>
 	</listener>
+	
 	<filter>
 		<filter-name>base</filter-name>
 		<filter-class>club.zhcs.thunder.filter.ContextPathInjectFilter</filter-class>
@@ -100,6 +101,10 @@
 	</error-page>
 	<error-page>
 		<exception-type>org.apache.shiro.authz.UnauthenticatedException</exception-type>
+		<location>/403.jsp</location>
+	</error-page>
+	<error-page>
+		<exception-type>org.apache.shiro.authz.AuthorizationException</exception-type>
 		<location>/403.jsp</location>
 	</error-page>
 </web-app>
