--- a/spring-thunder/src/main/webapp/WEB-INF/web.xml
+++ b/spring-thunder/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 	<display-name>spring-thunder</display-name>
+	<listener>
+		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
+	</listener>
 
+	<listener>
+		<listener-class>club.zhcs.thunder.listener.NutzContenxtInitListener</listener-class>
+	</listener>
 	<filter>
 		<filter-name>shiroFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -16,10 +22,8 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<listener>
-		<listener-class>club.zhcs.thunder.listener.NutzContenxtInitListener</listener-class>
-	</listener>
-	
+
+
 	<filter>
 		<filter-name>base</filter-name>
 		<filter-class>club.zhcs.thunder.filter.ContextPathInjectFilter</filter-class>
@@ -48,7 +52,7 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
+
 	<filter>
 		<filter-name>DruidWebStatFilter</filter-name>
 		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
@@ -69,7 +73,7 @@
 		<servlet-name>DruidStatView</servlet-name>
 		<url-pattern>/druid/*</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>sigar</servlet-name>
 		<servlet-class>club.zhcs.titans.gather.servlet.SigarServlet</servlet-class>
