--- a/spring-thunder/src/main/resources/config/application.properties
+++ b/spring-thunder/src/main/resources/config/application.properties
@@ -4,3 +4,4 @@ baidu.map.key=dHF4Mm7zlaP0qGYNMu4AcaAG
 base.domain=agent.kerbores.com
 http.protocol=https
 copy.right=Copyright &copy; 2016 \u91CD\u5E86\u667A\u6167\u57CE\u5E02 
+application.desc=\u4E00\u4E2A\u5F00\u7BB1\u5373\u7528\u7684\u5FEB\u901F\u5F00\u53D1\u811A\u624B\u67B6 \u7528\u6237\u5BC6\u7801admin/123456
