--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -71,13 +71,14 @@
 		<!-- https://mvnrepository.com/artifact/com.ibeetl/beetlsql -->
 		<dependency>
 			<groupId>org.nutz</groupId>
-			<artifactId>nutz</artifactId>
-			<version>1.r.57.r3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.nutz</groupId>
 			<artifactId>nutz-integration-spring</artifactId>
-			<version>1.r.57</version>
+			<version>1.r.58</version>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
