--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -190,5 +190,11 @@
 			<version>1.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+
 	</dependencies>
 </project>
