--- a/spring-thunder/src/main/resources/beetl.properties
+++ b/spring-thunder/src/main/resources/beetl.properties
@@ -3,6 +3,7 @@ RESOURCE.root=/WEB-INF/templates
 RESOURCE.autoCheck=true
 DELIMITER_STATEMENT_START=<!--#
 DELIMITER_STATEMENT_END=#-->
+WEBAPP_EXT = club.zhcs.thunder.ThunderExt
 #\u51fd\u6570
 FN.config = club.zhcs.thunder.ext.beetl.ConfigFun
 FN.loginUser = club.zhcs.thunder.ext.beetl.LoginUserFun
@@ -10,3 +11,4 @@ FN.alarmType = club.zhcs.thunder.ext.beetl.AlarmTypeFun
 FN.json = club.zhcs.thunder.ext.beetl.JsonFun
 FN.hasRole = club.zhcs.thunder.ext.beetl.shiro.ShiroRoleFunction
 FN.hasPermission = club.zhcs.thunder.ext.beetl.shiro.ShiroPermissionFuntion
+FN.message = club.zhcs.thunder.ext.beetl.MessageFunction
