--- a/spring-thunder/pom.xml
+++ b/spring-thunder/pom.xml
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz</artifactId>
-			<version>1.r.57.r3</version>
+			<version>1.r.60</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nutz</groupId>
@@ -121,17 +121,22 @@
 		<dependency>
 			<groupId>club.zhcs</groupId>
 			<artifactId>titans</artifactId>
-			<version>2.0.3</version>
+			<version>2.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-sigar</artifactId>
-			<version>1.r.58</version>
+			<version>1.r.60.r2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-plugins-nop</artifactId>
+			<version>1.r.61.r2</version>
 		</dependency>
 	</dependencies>
 </project>
