--- a/spring-thunder/thunder-web/pom.xml
+++ b/spring-thunder/thunder-web/pom.xml
@@ -15,5 +15,9 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-actuator</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  	</dependency>
   </dependencies>
 </project>
